--- a/client/html/comet_sidebar.html
+++ b/client/html/comet_sidebar.html
@@ -39,6 +39,12 @@
 						</li>
 					</ul>
 				</li>
+				<li class="treeview {{isActiveRoute regex='cometDashboardConfig' className='on'}}">
+					<a href="{{pathFor 'cometDashboardConfig'}}">
+						<i class="fa fa-gears"></i>
+						<span>Configure</span>
+					</a>
+				</li>
 			</ul>
 		</section>
 	</aside>
