Setting up comet for settings [issues/17]

--- a/client/html/comet_sidebar.html
+++ b/client/html/comet_sidebar.html
@@ -40,10 +40,16 @@
 					</ul>
 				</li>
 				<li class="treeview {{isActiveRoute regex='cometDashboardConfig' className='on'}}">
-					<a href="{{pathFor 'cometDashboardConfig'}}">
+					<a href="#">
 						<i class="fa fa-gears"></i>
 						<span>Configure</span>
+						<i class="fa fa-angle-left pull-right"></i>
 					</a>
+					<ul class="treeview-menu">
+						<li>
+							<a href="{{pathFor 'cometDashboardConfig'}}"><i class="fa fa-toggle-on"></i> General</a>
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</section>
